[package]
name = "logngine"
version = "0.1.0"
edition = "2021"
authors = ["Logan Dapp <logandapp@gmail.com>"]
license = "MIT"
description = "Package designed for my specific engineering numerical method needs."


[dependencies]
ndarray = "0.16.1"
rayon = { version = "1.5", optional = true }
pyo3 = { version = "0.25.1", optional = true }
packed_simd_2 = {version = "0.3.8", optional = true}
heapless = {version = "0.8.0", optional = true}

[features]
default = []
python = ["pyo3"]
simd = ["packed_simd_2"]
embedded = ["heapless"]

[dev-dependencies]
criterion = "0.6.0"
